--- a/html5up-forty-template/index.html
+++ b/html5up-forty-template/index.html
@@ -29,9 +29,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">Resume Help</a></li>
+							<li><a href="landing.html">Explore</a></li>
+							<li><a href="generic.html">Career Timeline</a></li>
+							<li><a href="elements.html">Jobs</a></li>
 						</ul>
 					</nav>
 
@@ -39,12 +40,12 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Jake</h1>
+								<h1>Michelangelo</h1>
 							</header>
 							<div class="content">
-								<p>Welcome to my sandbox, where I'll share my experiments as a writer, UX Designer, and perpetual learner.</p>
+								<p>Carve Your Own Path to Career Mastery</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get To Know Me</a></li>
+									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
@@ -60,7 +61,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Resume Generator</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -69,7 +70,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">Calendar</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -78,7 +79,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Jobs</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -87,7 +88,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Explore</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -117,8 +118,6 @@
 									<header class="major">
 										<h2>Massa libero</h2>
 									</header>
-									<iframe src="html5up-forty-template\assets\python\todo_list_app.py" width="800" height="600"></iframe>
-
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
